--- a/event.html
+++ b/event.html
@@ -69,13 +69,13 @@
 
                             <li class="nav-item dropdown ovale-navigation">
 
-                                <a class="nav-link color-white-link fs-6 fw-bold dropdown-toggle ovale-navigation mx-xl-3 p-xl-3"
+                                <a class="nav-link color-white-link fs-6 fw-bold dropdown-toggle ovale-navigation mx-xl-3 p-xl-3 m "
                                     href="/index.html#objectif" role="button" data-bs-toggle="dropdown" aria-expanded="false ">
                                     <p>Objectifs</p>
                                 </a>
 
                                 <ul
-                                    class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-3 p-xl-3">
+                                    class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-3 p-xl-3 ">
                                     <li><a class="dropdown-item" href="#">L'évènement</a></li>
                                     <li><a class="dropdown-item" href="#photo-event">Une Photo</a></li>
                                     <li><a class="dropdown-item" href="#text-event">Description</a>
