--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 
 <body class="container-fluid bg-site text-light bg-background-website">
 
+
 <!-- Header part - Navigation -->
 <header class="container-fluid bg-site">
     <section id="navigation">
 
-        <nav class="navbar navbar-dark navbar-expand-lg bg-0">
-            <div class="container-fluid">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-0" >
+            <div class="container-fluid ">
 
                 <a href="#" class="d-flex align-items-center fs-4 text-white mb-2">
                     <img src="image/patte de chien picto2.png" width="100" height="100" class="me-3 picto-theme1"
@@ -49,8 +50,9 @@
 
                 <button data-for="ChienNavbar1" type="button" class="navbar-toggler changeDog" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" arial-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="toggle navigation" data-clickdog>
-                    <a href="#presentation"></a> <img src="image/Chienlangue&nonlanguepictoalt.png" width="42" height="42"
+                    aria-label="toggle navigation">
+                    <a href="#presentation"></a>
+                    <img src="image/Chienlangue&nonlanguepictoalt.png" width="42" height="42"
                         class="me-1 picto-theme2 changeDog" alt="Chien langue & non langue picto">
                 </button>
 
@@ -64,25 +66,23 @@
                             </a>
                         </li>
 
-
-
-    <div class="container-fluid">
-        <a class="navbar-brand color-white-link fs-6 fw-bold" href="#objectifs">Objectifs</a>
+    <div class="container-fluid mt-3">
+        <a class="navbar-brand color-white-link fs-6 fw-bold mx-xl-4 p-xl-4" href="#objectifs">Objectifs</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
-            aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controds="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
         </button>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown ovale-navigation"> 
                     <button class="d-flex btn btn-down " data-bs-toggle="dropdown" aria-expanded="false">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
-                                        <path
-                                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-                                    </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
+                        </svg>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu ovale-navigation">
-                        <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
-                        <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
-                        <li><a class="dropdown-item" href="/event.html#text-event">Description</a><li>
+                    <ul class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-4 p-xl-4">
+                        <li><a class="dropdown-item" href="#">L'évènement</a></li>
+                        <li><a class="dropdown-item" href="#photo-event">Une Photo</a></li>
+                        <li><a class="dropdown-item" href="#text-event">Description</a></li>
                     </ul>
                 </li>
             </ul>
@@ -175,7 +175,8 @@
                 </div>
             </div>
         </nav>
-    
+
+
     </section>
 
 </header>
@@ -526,7 +527,7 @@
                     </div>
                     <br>
                     <button class="w-6 py-8 btn btn-doggy btn-md" type="submit">
-                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6 changeDog"><p>Envoyez</p></button>
+                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6 changeDog"><p class="text-light">Envoyez</p></button>
 
                 </form>
             </div>
@@ -697,3 +698,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.js"></script>
 </body>
 </html>
+
+
