--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Modal Button -->
 
                 <button type="button" class="btn btn-warning-text" data-bs-toggle="modal" data-bs-target="#settingsModal">
-                    <img src="image/Chien parametre.png" width="42" height="auto" class="picto-theme3">
+                    <img src="image/Chien parametre.png" alt="Parameter" width="42" height="auto" class="picto-theme3">
                 </button>
 
                 <!-- Button NavBar responsive -->
@@ -87,7 +87,7 @@
                     </ul>
                 </li>
             </ul>
-    </div>
+        </div>
 
             <li class="nav-item">
             <a href="#gallerie-image" class=" nav-link color-white-link fs-6 fw-bold p-xl-3 mx-lg-3"><p>L'association</p></a>
@@ -96,7 +96,6 @@
                 <a href="#contact" class="nav-link color-white-link fs-6 fw-bold p-xl-3 mx-xl-3"><p>Contact</p></a>
             </li>
         </ul>   
-    </li>
 
                 <!-- Sub NavBar -->
                     <div class="dropdown text-start m-3 p-3 d-lg-none"> 
@@ -115,11 +114,10 @@
                             <li><a class="dropdown-item" href="#contact">Nous contacter</a></li>
                         </ul>
                     </div>
-              </ul>
-           </div>
+                </div>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
 
     </section>
@@ -205,9 +203,7 @@
                     numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
                     voluptates! Atque quae cupiditate qui eius?</p>
             </div>
-            <!-- <p><a class="btn btn-secondary" href="#">View details »</a></p> -->
         </div>
-
     <div class="row">
 <div class="col justify-content-start">
         <div class="d-flex col-md-5 col-lg-6
@@ -236,29 +232,6 @@
             </div>
         </div>
 
-
-        <!-- <br>
-
-    <div class="row">
-        <div class="col justify-content-end">
-        <div class="d-flex col-md-6 col-lg-12 order-md-1">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#eee"></rect><text x="45%" y="50%" fill="#aaa" dy=".3em">Placebo</text>
-            </svg>
-        </div>
-    </div>
-</div> -->
-
-<!-- <div class="row featurette">
-    <div class="col-md-7 order-md-2">
-        <h1 class="featurette-heading fw-normal lh-1 mb-3">Présentation<span class="text-muted"> de l'association</span>
-        </h1> -->
-        
-
-    
 </div>
 </article>
 
@@ -472,8 +445,7 @@
                     </div>
                     <br>
                     <button class="w-6 py-8 btn btn-doggy btn-md" type="submit">
-                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6 changeDog"><p class="text-light">Envoyez</p></button>
-
+                        <img src="image/Chienlangue&nonlanguepictoalt.png" alt="DogButton" width="72" height="auto" class="picto-theme6 changeDog"><p class="text-light">Envoyez</p></button>
                 </form>
             </div>
         </fieldset>
@@ -486,22 +458,10 @@
 <div class="container-fluid bg-4 text-center fw-normal md-0">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
         <div class="col-md-6 d-flex align-items-center">
-            <!-- <a href="#navigation"> Vers le haut de page -->
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="38" height="40" fill="white"
-                    class="bi bi-arrow-bar-up fleche-navigation" viewBox="0 0 16 16">
-
-                    <path fill-rule="evenodd"
-                        d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" />
-                </svg>
-
-            </a> -->
-            <!--Vers le haut de page -->
             <ul class="float-end">
                 <span class="mb-3 mb-md-0">© 2023 Ilan Tervil, Tous droit réservé.</span>
             </ul>
         </div>
-
-        <!-- <ul class="list-unstyled d-flex col-md-3 col-lg-6 "> -->
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
             <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN BEHANCE">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-behance"
@@ -582,14 +542,14 @@
 
 <!-- Bouton ScrollDown -->
 <a href="#footer" class="btn btn-scrollDown" id="scrollDown">
-    <img src="image/Chien langue Scroll Top.png" class="picto-theme5" width="40" height="auto">
+    <img src="image/Chien langue Scroll Top.png" alt="ScrollDogButtonTop" class="picto-theme5" width="40" height="auto">
 </a>
 
 
 
 <!--Bouton ScrollTop -->
 <a href="#navigation" class="btn btn-scrolltop" id="scrollTop">
-    <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="40" height="auto">
+    <img src="image/Chien langue Scroll Down.png" alt="ScrollDogButtonDown" class="picto-theme4" width="40" height="auto">
 </a>
 
 
@@ -605,12 +565,12 @@
                 <div class="row row-cols-2 justify-content-center">
 
                     <div class="ChangeThemeDiv block-spring position-relative rounded-circle rounded-pill" data-theme="spring">
-                        <img class="btn-spring position-relative top-50 start-50 translate-middle" src="image/chien printemp.png" width="42" height="auto">
+                        <img class="btn-spring position-relative top-50 start-50 translate-middle" alt="SpringButtonTheme" src="image/chien printemp.png" width="42" height="auto">
                         <!-- Printemps de chien -->
                     </div>
 
                     <div class="ChangeThemeDiv block-autumn position-relative rounded-circle rounded-pill" data-theme="autumn">
-                        <img class="btn-autumn position-relative top-50 start-50 translate-middle" src="image/chien automne.png" width="42" height="auto">
+                        <img class="btn-autumn position-relative top-50 start-50 translate-middle" alt="AutunmButtonTheme" src="image/chien automne.png" width="42" height="auto">
                         <!-- Chien d'autonme -->
                     </div>
 
